# ai-defense-langchain-middleware

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  tests.yml
aidefense_langchain/: __init__.py  _content.py  _env.py  _inspection_scope.py  middleware_agentsec.py  middleware_chat_client.py  middleware_tool_agentsec.py  middleware_tool_inspection.py  react_agent.py
examples/: 01_chat_client_enforce.py  02_chat_client_monitor.py  03_chat_client_with_rules.py  04_agentsec_enforce.py  05_agentsec_with_protect.py  05_composed_middleware.py  06_composed_middleware.py  06_side_by_side.py  07_side_by_side.py  07_tool_inspection_enforce.py  08_tool_inspection_agentsec.py  09_callback_handler_create_react_agent.py  09_tool_inspection_agentsec.py  10_azure_openai_create_react_agent.py
tests/: test_inspection_scope.py  test_middleware_agentsec.py  test_middleware_chat_client.py  test_middleware_tool_agentsec.py  test_middleware_tool_inspection.py  test_react_agent.py
